Login, company List

--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -8,7 +8,7 @@
               <div class="col-7">
                 <div class="text-primary p-4">
                   <h5 class="text-primary">Welcome Back !</h5>
-                  <p>Sign in to continue to Skote.</p>
+                  <p>Sign in to continue to Dashboard.</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="card-body pt-0">
-            <div>
+            <!-- <div>
               <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
@@ -25,68 +25,45 @@
                   </span>
                 </div>
               </a>
-            </div>
+            </div> -->
             <div class="p-2">
-              <form class="form-horizontal" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <form class="form-horizontal" [formGroup]="loginForm">
 
                 <alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</alert>
 
                 <div class="mb-3">
-                  <label for="email">Email</label>
-                  <input type="email" formControlName="email" class="form-control" id="email" placeholder="Email"
+                  <label for="text">Username</label>
+                  <input type="text" formControlName="email" class="form-control" id="email" placeholder="Username"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                   <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                    <div *ngIf="f.email.errors.required">Email is required</div>
-                    <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                    <div *ngIf="f.email.errors.required">Username is required</div>
+                    <!-- <div *ngIf="f.email.errors.email">Email must be a valid email address</div> -->
                   </div>
                 </div>
 
                 <div class="mb-3">
                   <label for="password">Password</label>
                   <div class="input-group auth-pass-inputgroup">
-                    <input type="password" class="form-control" formControlName="password" placeholder="Enter password"
-                      [ngClass]="{ 'is-invalid': submitted && f.password.errors }" aria-label="Password"
-                      aria-describedby="password-addon">
+                    <input [type]="passType" class="form-control" formControlName="password"
+                      placeholder="Enter password" aria-label="Password" aria-describedby="password-addon">
 
-                    <button class="btn btn-light ms-0" type="button" id="password-addon"><i
+                    <button class="btn btn-light ms-0" type="button" id="password-addon" (click)="showHidePassword()"><i
                         class="mdi mdi-eye-outline"></i></button>
-                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                      <span *ngIf="f.password.errors.required">Password is required</span>
-                    </div>
+
                   </div>
                 </div>
 
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="remember-check">
                   <label class="form-check-label" for="remember-check">
-                      Remember me
+                    Remember me
                   </label>
-              </div>
+                </div>
 
                 <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" type="submit">Log In</button>
+                  <button class="btn btn-primary" type="submit" (click)="onSubmit()">Log In</button>
                 </div>
-                <div class="mt-4 text-center">
-                  <h5 class="font-size-14 mb-3">Sign in with</h5>
-
-                  <ul class="list-inline">
-                    <li class="list-inline-item">
-                      <a href="javascript::void()" class="social-list-item bg-primary text-white border-primary">
-                        <i class="mdi mdi-facebook"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="javascript::void()" class="social-list-item bg-info text-white border-info">
-                        <i class="mdi mdi-twitter"></i>
-                      </a>
-                    </li>
-                    <li class="list-inline-item">
-                      <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
-                        <i class="mdi mdi-google"></i>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+               
                 <div class="mt-4 text-center">
                   <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
                     your
@@ -97,13 +74,6 @@
 
           </div>
         </div>
-        <div class="mt-5 text-center">
-          <p>Don't have an account ? <a routerLink="/account/signup" class="fw-medium text-primary"> Signup
-              now
-            </a> </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
-        </div>
-
       </div>
     </div>
   </div>
