--- a/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
+++ b/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
@@ -1,3 +1,47 @@
+<div class="card">
+    <div class="card-header">
+        <h5>Customer Receivable Chart</h5>
+    </div>
+    <div class="row" style="margin: 2%;">
+        <div class="col-sm-3">
+            <label>Select Branch *</label>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group form-primary form-static-label">
+                <span class="border-lable-flt">
+                    <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
+                        (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
+                        <ng-option *ngFor="let values of branch" [value]="values">
+                            {{values.NAME}}</ng-option>
+                    </ng-select>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="margin: 2%;">
+        <div class="col-sm-3">
+            <label>Select Dates *</label>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group input-group">
+                <span class="border-lable-flt">
+                    <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                        [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+                </span>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="form-group input-group">
+                <span class="border-lable-flt">
+                    <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                        [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+                </span>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 
 <select class="form-control" style="width: 120px;
