--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -1,81 +1,128 @@
+
+<div class="card">
+  <div class="card-header">
+      <h5>Development Cost Details</h5>
+  </div>
+  <div class="row" style="margin: 2%;">
+      <div class="col-sm-3">
+          <label>Select Branch *</label>
+      </div>
+      <div class="col-sm-4">
+          <div class="form-group form-primary form-static-label">
+              <span class="border-lable-flt">
+                  <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
+                      (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
+                      <ng-option *ngFor="let values of branch" [value]="values">
+                          {{values.NAME}}</ng-option>
+                  </ng-select>
+              </span>
+          </div>
+      </div>
+  </div>
+  <div class="row" style="margin: 2%;">
+    <div class="col-sm-3">
+        <label>Select Dates *</label>
+    </div>
+    <div class="col-sm-4">
+        <div class="form-group input-group">
+            <span class="border-lable-flt">
+                <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                    [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+            </span>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="form-group input-group">
+            <span class="border-lable-flt">
+                <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                    [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+            </span>
+        </div>
+    </div>
+</div>
+</div>
+
+      
+     
+      
+
 <div class="container-fluid">
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="card">
-          <div class="card-body" dir="ltr">
-            <h4 class="card-title mb-4">Payment Collection Plan</h4>
-  
-  
-            <div class="row" id="r1" style="margin-top: 1%;margin-bottom: 30%;">
-              <div class="col-md-12">
-                <div class="table-responsive">
-                  <div class="table-fixed">
-                    <!-- <smart-table #table id="table"> -->
-  
-                      <table class="table table-striped table-bordered table-hover compact">
-                        <thead>
-                          <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th>Feb-23</th>
-                            <th>Jan-23</th>
-                            <th>Dec-22</th>
-                            <th>Nov-22</th>
-                            <th>Oct-22</th>
-                            <th>Sep-22</th>
-                          </tr>
-                          <tr>
-                            <th>Sr. No.</th>
-                            <th>Name of Customer</th>
-                            <th>Payment Amount Plan For The Month Rs.</th>
-                            <th>Amount Received Rs.</th>
-                            <th>% of Recovery</th>
-                            <th>Credit Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                            <th>Avg Payment Receipt Days</th>
-                          </tr>
-                          <tr>
-                            <th colspan="12" style="align-items: center;">DOMASTIC</th>
-                          </tr>
-                        </thead>
-                        <tbody *ngIf="dataSource?.length != 0">
-                          <tr *ngFor="let data of dataSource;let indexOfelement = index">
-                            <td class="td_right">{{indexOfelement != dataSource?.length - 1 ? indexOfelement + 1 : ''}}
-                            </td>
-                            <td [ngClass]="indexOfelement != dataSource?.length - 1 ? '' : 'bold'">{{data.SUBGL_LONGNAME}}
-                            </td>
-                            <td class="td_right">{{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
-                            <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
-                            <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' :
-                              data.RECV_PERCENT}}
-                            </td>
-                            <td class="td_right">{{data.CREDIT_DAYS != null ? data.CREDIT_DAYS : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS != null ? data.CR_DAYS : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS1 != null ? data.CR_DAYS1 : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS2 != null ? data.CR_DAYS2 : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS3 != null ? data.CR_DAYS3 : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
-                            <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
-                          </tr>
-                        </tbody>
-                        <tbody *ngIf="dataSource?.length == 0">
-                          <tr>
-                            <td colspan="12">No Data</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    <!-- </smart-table> -->
-  
-                  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-body" dir="ltr">
+          <h4 class="card-title mb-4">Payment Collection Plan</h4>
+
+
+          <div class="row" id="r1" style="margin-top: 1%;margin-bottom: 30%;">
+            <div class="col-md-12">
+              <div class="table-responsive">
+                <div class="table-fixed">
+                  <!-- <smart-table #table id="table"> -->
+
+                  <table class="table table-striped table-bordered table-hover compact">
+                    <thead>
+                      <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th>Feb-23</th>
+                        <th>Jan-23</th>
+                        <th>Dec-22</th>
+                        <th>Nov-22</th>
+                        <th>Oct-22</th>
+                        <th>Sep-22</th>
+                      </tr>
+                      <tr>
+                        <th>Sr. No.</th>
+                        <th>Name of Customer</th>
+                        <th>Payment Amount Plan For The Month Rs.</th>
+                        <th>Amount Received Rs.</th>
+                        <th>% of Recovery</th>
+                        <th>Credit Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                        <th>Avg Payment Receipt Days</th>
+                      </tr>
+                      <tr>
+                        <th colspan="12" style="align-items: center;">DOMASTIC</th>
+                      </tr>
+                    </thead>
+                    <tbody *ngIf="dataSource?.length != 0">
+                      <tr *ngFor="let data of dataSource;let indexOfelement = index">
+                        <td class="td_right">{{indexOfelement != dataSource?.length - 1 ? indexOfelement + 1 : ''}}
+                        </td>
+                        <td [ngClass]="indexOfelement != dataSource?.length - 1 ? '' : 'bold'">{{data.SUBGL_LONGNAME}}
+                        </td>
+                        <td class="td_right">{{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
+                        <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
+                        <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' :
+                          data.RECV_PERCENT}}
+                        </td>
+                        <td class="td_right">{{data.CREDIT_DAYS != null ? data.CREDIT_DAYS : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS != null ? data.CR_DAYS : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS1 != null ? data.CR_DAYS1 : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS2 != null ? data.CR_DAYS2 : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS3 != null ? data.CR_DAYS3 : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
+                        <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
+                      </tr>
+                    </tbody>
+                    <tbody *ngIf="dataSource?.length == 0">
+                      <tr>
+                        <td colspan="12">No Data</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <!-- </smart-table> -->
+
                 </div>
               </div>
             </div>
@@ -84,3 +131,4 @@
       </div>
     </div>
   </div>
+</div>
