--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -1,45 +1,75 @@
 <div class="card">
     <div class="card-header">
-        <h5>Top5 Supplier CR Percent </h5>
+      <h5>Top5-suppliers-cr-percent</h5>
     </div>
-    <div class="row" style="margin: 2%;">
-        <div class="col-sm-3">
+    <div class="card-block">
+      <form [formGroup]="angForm">
+  
+        <div class="row" style="margin: 2%;">
+          <div class="col-sm-3">
             <label>Select Branch *</label>
-        </div>
-        <div class="col-sm-4">
+          </div>
+          <div class="col-sm-4">
             <div class="form-group form-primary form-static-label">
-                <span class="border-lable-flt">
-                    <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                        (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
-                        <ng-option *ngFor="let values of branch" [value]="values">
-                            {{values.NAME}}</ng-option>
-                    </ng-select>
-                </span>
+              <span class="border-lable-flt">
+                <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabelBRANCH_NAME="NAME" required #BRANCH_NAME
+                  [{ngModel}]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                  [selectOnTab]='true'>
+                  <ng-option *ngFor="let values of branch" [value]="values">
+                    {{values.NAME}}</ng-option>
+                </ng-select>
+              </span>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="row" style="margin: 2%;">
-        <div class="col-sm-3">
+        <div class="row" style="margin: 2%;">
+          <div class="col-sm-3">
             <label>Select Dates *</label>
-        </div>
-        <div class="col-sm-4">
+          </div>
+          <div class="col-sm-4">
             <div class="form-group input-group">
-                <span class="border-lable-flt">
-                    <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                        [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
-                </span>
+              <span class="border-lable-flt">
+                <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" appTheme class="form-control"
+                  [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate" bsDatepicker
+                  formControlName="FROM" required>
+              </span>
             </div>
-        </div>
-        <div class="col-sm-4">
+            <div class="form-group form-primary form-static-label"
+              *ngIf="angForm.controls['FROM'].invalid && (angForm.controls['FROM'].dirty || angForm.controls['FROM'].touched)"
+              class="alert alert-danger">
+              <div *ngIf="angForm.controls['FROM'].errors?.required">
+                This field is required
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
             <div class="form-group input-group">
-                <span class="border-lable-flt">
-                    <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                        [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
-                </span>
+              <span class="border-lable-flt">
+                <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
+                  [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [maxDate]="maxDate"
+                  [(ngModel)]="todate" bsDatepicker formControlName="TO" required appTheme>
+              </span>
             </div>
+            <div class="form-group form-primary form-static-label"
+              *ngIf="angForm.controls['TO'].invalid && (angForm.controls['TO'].dirty || angForm.controls['TO'].touched)"
+              class="alert alert-danger">
+              <div *ngIf="angForm.controls['TO'].errors?.required">
+                This field is required
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="row" style="margin: 2%;">
+          <div class="col-sm text-right">
+            <button class="btn btn-primary">Go</button>
+          </div>
+        </div>
+        
+      </form>
     </div>
-</div>
+  </div>
+
+
 
 
 <select class="form-control" style="width: 120px;
@@ -58,3 +88,7 @@
 
 <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
     [columns]="columns"></smart-table>
+  
+  
+  
+ 
