sales-development cost details,monthly value addition target vs actual,schudle adherence for the month and purchase- supplierwise purchase and CR in Tons

--- a/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
+++ b/src/app/pages/sales/monthly-value-addition-target-vs-actual/monthly-value-addition-target-vs-actual.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-      <h5>Supplierwise Purchase and CR in Tons</h5>
+      <h5>Monthly Value Addition</h5>
     </div>
     <form [formGroup]="angForm">
     <div class="card-block">
@@ -46,13 +46,9 @@
           </div>
           
         </form>
-                
+      
+    
 
-
-                
-       
-            
-            
 
 <select class="form-control" style="width: 120px;
     height: 30px;
