--- a/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
+++ b/src/app/pages/sales/daily-sales-data/daily-sales-data.component.html
@@ -2,6 +2,7 @@
     <div class="card-header">
         <h5>Daily Sales data</h5>
     </div>
+    <form [formGroup]="angForm">
     <div class="card-block">
         <div class="row" style="margin: 2%;">
             <div class="col-sm-3">
@@ -11,7 +12,8 @@
                 <div class="form-group form-primary form-static-label">
                     <span class="border-lable-flt">
                         <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                            (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
+                            [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                            [selectOnTab]='true'>
                             <ng-option *ngFor="let values of branch" [value]="values">
                                 {{values.NAME}}</ng-option>
                         </ng-select>
@@ -28,20 +30,14 @@
                 <div class="form-group input-group">
                     <span class="border-lable-flt">
                         <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
+                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" formControlName="FROM"
+                            [maxDate]="maxDate" bsDatepicker required>
                     </span>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="form-group input-group">
-                    <span class="border-lable-flt">
-                        <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
-                            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [maxDate]="maxDate" bsDatepicker required>
-                    </span>
-                </div>
-            </div>
+            
         </div>
-        
+
         <div class="row" style="margin: 2%;">
             <div class="col-sm-3">
                 <label> Customer Select Option *</label>
@@ -58,15 +54,24 @@
                     <label class="form-check-label" for="formRadios2">
                         Select Customers
                     </label>
+                    
                 </div>
             </div>
         </div>
     </div>
+    <div class="row" style="margin: 2%;">
+        <div class="col-sm text-right">
+          <button class="btn btn-primary">Go</button>
+        </div>
+      </div>
+    </form>
 </div>
 
 
 
-<select class="form-control" style="width: 120px;
+  
+  
+  <select class="form-control" style="width: 120px;
     height: 30px;
     font-size: 10px;
     margin-top: 3px;
@@ -83,22 +88,5 @@
 <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
     [columns]="columns"></smart-table>
 
-   <style>
-    .container{
-        width: 100px;
-        height: 100px;
-        border: 5px;
-        display: grid;
-    }
-    button{
-    background-color: lightblue;
-    color: black;
-    font-size: 15px;
-    margin: auto;
-}
-   </style>
-   <body>
-    <div class="container">
-   <button>Next</button>
-   </div>
-   </body>
+
+
