--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -1,58 +1,67 @@
 <div class="card">
-    <div class="card-header">
-        <h5>Monthly Sales and Target</h5>
+  <div class="card-header">
+    <h5>Monthly Sales And Target</h5>
+  </div>
+  <form [formGroup]="angForm">
+  <div class="card-block">
+      <div class="row" style="margin: 2%;">
+        <div class="col-sm-3">
+          <label>Select Branch *</label>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group form-primary form-static-label">
+            <span class="border-lable-flt">
+              <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
+                [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                [selectOnTab]='true'>
+                <ng-option *ngFor="let values of branch" [value]="values">
+                  {{values.NAME}}</ng-option>
+              </ng-select>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="margin: 2%;">
+          <div class="col-sm-3">
+              <label>Select Finacial year *</label>
+          </div>
+          <div class="col-sm-4">
+              <div class="form-group form-primary form-static-label">
+                  <span class="border-lable-flt">
+                      <ng-select id="YEAR_NAME" bindValue="CODE" bindLabel="NAME" required #YEAR_NAME
+                      [(ngModel)]="selectedYear" formControlName="YEAR_NAME" (focus)="onFocus(YEAR_NAME)" [selectOnTab]='true'>
+                          <ng-option *ngFor="let values of branch" [value]="values">
+                              {{values.NAME}}</ng-option>
+                      </ng-select>
+                  </span>
+              </div>
+          </div>
+      </div>
     </div>
-    <div class="card-block">
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label>Select Branch *</label>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group form-primary form-static-label">
-                    <span class="border-lable-flt">
-                        <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                            (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
-                            <ng-option *ngFor="let values of branch" [value]="values">
-                                {{values.NAME}}</ng-option>
-                        </ng-select>
-                    </span>
-                </div>
-            </div>
 
+      <div class="row" style="margin: 2%;">
+          <div class="col-sm text-right">
+            <button class="btn btn-primary">Go</button>
+          </div>
         </div>
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label>Financial Year *</label>
-            </div>
-            <div class="col-sm-4">
-                <div class="form-group form-primary form-static-label">
-                    <span class="border-lable-flt">
-                        <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                            (focus)="onFocus(BRANCH_NAME)" [selectOnTab]='true'>
-                            <ng-option *ngFor="let values of branch" [value]="values">
-                                {{values.NAME}}</ng-option>
-                        </ng-select>
-                    </span>
-                </div>
-            </div>
-
-        </div>
-        </div>
-</div>
+        
+      </form>
+              
 
 
-
-
-
+              
+     
+          
+          
 
 <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
+  height: 30px;
+  font-size: 10px;
+  margin-top: 3px;
+  float: right;" (change)="handleClick($event, 'csv')">
+  <option selected>Export Type </option>
+  <option>CSV</option>
+  <option>PDF</option>
 </select>
 
 <!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
@@ -60,4 +69,4 @@
 </smart-table> -->
 
 <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-    [columns]="columns"></smart-table>
+  [columns]="columns"></smart-table>
