--- a/src/app/pages/sales/development-cost-details/development-cost-details.component.html
+++ b/src/app/pages/sales/development-cost-details/development-cost-details.component.html
@@ -5,7 +5,7 @@
   <div class="card-block">
     <form [formGroup]="angForm">
 
-      <div class="row" style="margin: 2%;">
+      <div class="row" style="margin: 2%;" *ngIf="showBranch">
         <div class="col-sm-3">
           <label>Select Branch *</label>
         </div>
