Customer receivable chart,Oil consumption,customer wise plan vs actual sale

--- a/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
+++ b/src/app/pages/wip-machine-shop/oil-consumption/oil-consumption.component.html
@@ -4,7 +4,7 @@
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
-            <div class="row" style="margin: 2%;">
+            <div class="row" style="margin: 2%;" *ngIf="showBranch">
                 <div class="col-sm-3">
                     <label>Select Branch *</label>
                 </div>
