--- a/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
+++ b/src/app/pages/finance/customer-receivable-chart/customer-receivable-chart.component.html
@@ -1,75 +1,77 @@
 <div class="card">
-    <div class="card-header">
-        <h5>Customer Receivable Chart</h5>
-    </div>
-    
-    <div class="card-block">
-        <form [formGroup]="angForm">
-        <div class="row" style="margin: 2%;">
-            <div class="col-sm-3">
-                <label>Select Branch *</label>
+  <div class="card-header">
+    <h5>Customer Receivable Chart</h5>
+  </div>
+
+  <div class="card-block">
+    <form [formGroup]="angForm">
+      <div class="row" style="margin: 2%;" *ngIf="showBranch">
+        <div class="col-sm-3">
+          <label>Select Branch *</label>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group form-primary form-static-label">
+            <span class="border-lable-flt">
+              <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
+                [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
+                [selectOnTab]='true'>
+                <ng-option *ngFor="let values of branch" [value]="values">
+                  {{values.NAME}}</ng-option>
+              </ng-select>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" style="margin: 2%;">
+        <div class="col-sm-3">
+          <label>Select Dates *</label>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group input-group">
+            <span class="border-lable-flt">
+              <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" class="form-control"
+                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate" bsDatepicker
+                formControlName="FROM" required>
+            </span>
+          </div>
+          <div class="form-group form-primary form-static-label"
+            *ngIf="angForm.controls['FROM'].invalid && (angForm.controls['FROM'].dirty || angForm.controls['FROM'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="angForm.controls['FROM'].errors?.required">
+              This field is required
             </div>
-            <div class="col-sm-4">
-                <div class="form-group form-primary form-static-label">
-                  <span class="border-lable-flt">
-                    <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" required #BRANCH_NAME
-                      [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
-                      [selectOnTab]='true'>
-                      <ng-option *ngFor="let values of branch" [value]="values">
-                        {{values.NAME}}</ng-option>
-                    </ng-select>
-                  </span>
-                </div>
-              </div>
-</div>
-
-<div class="row" style="margin: 2%;">
-    <div class="col-sm-3">
-      <label>Select Dates *</label>
-    </div>
-    <div class="col-sm-4">
-      <div class="form-group input-group">
-        <span class="border-lable-flt">
-          <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" appTheme class="form-control"
-            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="fromdate" [maxDate]="maxDate" bsDatepicker
-            formControlName="FROM" required>
-        </span>
-      </div>
-      <div class="form-group form-primary form-static-label"
-        *ngIf="angForm.controls['FROM'].invalid && (angForm.controls['FROM'].dirty || angForm.controls['FROM'].touched)"
-        class="alert alert-danger">
-        <div *ngIf="angForm.controls['FROM'].errors?.required">
-          This field is required
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group input-group">
+            <span class="border-lable-flt">
+              <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
+                [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [maxDate]="maxDate"
+                [(ngModel)]="todate" bsDatepicker formControlName="TO" required appTheme>
+            </span>
+          </div>
+          <div class="form-group form-primary form-static-label"
+            *ngIf="angForm.controls['TO'].invalid && (angForm.controls['TO'].dirty || angForm.controls['TO'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="angForm.controls['TO'].errors?.required">
+              This field is required
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="form-group input-group">
-        <span class="border-lable-flt">
-          <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
-            [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [minDate]="fromdate" [maxDate]="maxDate"
-            [(ngModel)]="todate" bsDatepicker formControlName="TO" required appTheme>
-        </span>
-      </div>
-      <div class="form-group form-primary form-static-label"
-        *ngIf="angForm.controls['TO'].invalid && (angForm.controls['TO'].dirty || angForm.controls['TO'].touched)"
-        class="alert alert-danger">
-        <div *ngIf="angForm.controls['TO'].errors?.required">
-          This field is required
+
+      <div class="row" style="margin: 2%;">
+        <div class="col-sm text-right">
+          <button class="btn btn-primary">Go</button>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="row" style="margin: 2%;">
-    <div class="col-sm text-right">
-      <button class="btn btn-primary">Go</button>
-    </div>
+    </form>
   </div>
+</div>
 
-</form>
-</div>
-</div>
+
 
 
 
@@ -82,9 +84,9 @@
     font-size: 10px;
     margin-top: 3px;
     float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
+  <option selected>Export Type </option>
+  <option>CSV</option>
+  <option>PDF</option>
 </select>
 
 <!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
@@ -92,4 +94,4 @@
 </smart-table> -->
 
 <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-    [columns]="columns"></smart-table>
+  [columns]="columns"></smart-table>
