--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -1,10 +1,10 @@
 <div class="card">
     <div class="card-header">
-        <h5>Schedule Adherence for the month</h5>
+        <h5>Customer wise plan vs actual sale</h5>
     </div>
-        <form [formGroup]="angForm">
-            <div class="card-block">
-            <div class="row" style="margin: 2%;">
+    <form [formGroup]="angForm">
+        <div class="card-block">
+            <div class="row" style="margin: 2%; " *ngIF="showBranch">
                 <div class="col-sm-3">
                     <label>Select Branch *</label>
                 </div>
@@ -55,33 +55,33 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="row" style="margin: 2%;">
+            <div class="col-sm text-right">
+                <button class="btn btn-primary">Go</button>
             </div>
+        </div>
 
-            <div class="row" style="margin: 2%;">
-                <div class="col-sm text-right">
-                    <button class="btn btn-primary">Go</button>
-                </div>
-            </div>
-
-        </form>
+    </form>
 
 
 
 
 
-<select class="form-control" style="width: 120px;
+    <select class="form-control" style="width: 120px;
     height: 30px;
     font-size: 10px;
     margin-top: 3px;
     float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
-</select>
+        <option selected>Export Type </option>
+        <option>CSV</option>
+        <option>PDF</option>
+    </select>
 
-<!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
+    <!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
 
 </smart-table> -->
 
-<smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-    [columns]="columns"></smart-table>
+    <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping"
+        [keyboardNavigation]="keyboardNavigation" [columns]="columns"></smart-table>
