--- a/src/app/account/auth/company-list/company-list.component.html
+++ b/src/app/account/auth/company-list/company-list.component.html
@@ -17,7 +17,7 @@
                                                     id="usertable">
                                                     <thead style="position: sticky; top: 0; text-align: center">
                                                         <tr>
-                                                            <th style="text-transform: capitalize;">Company Id</th>
+                                                            <th style="text-transform: capitalize;min-width: fit-content;">Company Id</th>
                                                             <th style="text-transform: capitalize;">Comapny Name</th>
 
                                                         </tr>
