--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -61,9 +61,15 @@
                 </div>
 
                 <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" type="submit" (click)="onSubmit()">Log In</button>
+                  <button class="btn btn-primary" [disabled]="isLoading" (click)="onSubmit()"><i class="fa"
+                      [ngClass]="{'fa-spin fa-spinner': isLoading, 'fa-check': !isLoading}"></i> Log In</button>
+                  <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()" Log In>
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
+                    <span class="sr-only">Log In </span>
+                  </button> -->
+                  <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()">Log In</button> -->
                 </div>
-               
+
                 <div class="mt-4 text-center">
                   <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
                     your
