--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -3,21 +3,21 @@
     <div class="d-flex">
       <!-- LOGO -->
       <div class="navbar-brand-box">
-        <a routerLink="/" class="logo logo-dark">
-          <span class="logo-sm">
+        <a class="logo logo-dark">
+          <!-- <span class="logo-sm">
             <img src="assets/images/logo.svg" alt="" height="22">
-          </span>
+          </span> -->
           <span class="logo-lg">
-            <img src="assets/images/logo-dark.png" alt="" height="17">
+            <img src="assets/images/bways.png" alt="" style="height: 50px;">
           </span>
         </a>
 
-        <a routerLink="/" class="logo logo-light">
-          <span class="logo-sm">
+        <a class="logo logo-light">
+          <!-- <span class="logo-sm">
             <img src="assets/images/logo-light.svg" alt="" height="22">
-          </span>
+          </span> -->
           <span class="logo-lg">
-            <img src="assets/images/logo-light.png" alt="" height="19">
+            <img src="assets/images/bways.png" alt="" style="height: 50px;">
           </span>
         </a>
       </div>
@@ -350,7 +350,7 @@
 
       <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" dropdownToggle id="page-header-user-dropdown">
-          <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-1.jpg" alt="Header Avatar">
+          <img class="rounded-circle header-profile-user" src="assets/images/users/userlogo.png" alt="Header Avatar">
           <span class="d-none d-xl-inline-block ms-1">{{username}}</span>
           <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
         </button>
