--- a/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
+++ b/src/app/pages/purchase/supplierwise-purchase-and-cr-in-tons/supplierwise-purchase-and-cr-in-tons.component.html
@@ -7,11 +7,11 @@
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
-      <div class="form-group row justify-content-md-center" style="margin: 2%;" *ngIf="showBranch">
-        <div class="col-sm-3">
-          <label>Select Branch *</label>
+      <div class="row" style="margin: 1%;">
+        <div class="col-sm-2" *ngIf="showBranch">
+          <label>Select Branch <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2" *ngIf="showBranch">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME [(ngModel)]="selectedBrach"
@@ -22,12 +22,12 @@
             </span>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm-3">
-          <label>Select Finacial year *</label>
+        <!-- </div>
+      <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+        <div class="col-sm-2">
+          <label>Select Finacial year <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
@@ -39,115 +39,84 @@
             </span>
           </div>
         </div>
-      </div>
+        <!-- </div>
     </div>
-    <div class="form-group row justify-content-md-center" style="margin: 2%;">
-      <div class="col-sm text-center">
-        <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
-            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+    <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+        <div class="col-sm">
+          <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
+              [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        </div>
       </div>
     </div>
   </form>
 </div>
 
-<div class="form-group row justify-content-md-center" *ngIf="showtable">
-  <div class="col-sm">
-    <div class="card">
-      <div class="card-block">
-        <!-- <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float:right;" (change)="handleClick($event, 'csv')">
-            <option selected>Export Type </option>
-            <option>CSV</option>
-            <option>PDF</option>
-        </select> -->
-        <!-- <smart-table #table class="table-hover table-bordered compact" id="table" [dataSource]="dataSource"
-            [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true"
-            [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode"
-            [selectionMode]="'one'">
-        </smart-table> -->
-
-        <!-- <smart-table #table id="table"> -->
-        <table class="table table-striped table-bordered table-hover compact">
-          <thead>
-            <tr>
-              <th scope="col">Supplier Name</th>
-              <th scope="col">Avg. Purchase</th>
-              <th scope="col">Avg. Purchase Returns</th>
-              <th scope="col">Avg. Purchase Schedule</th>
-              <th scope="col">Delivery Rating</th>
-              <th scope="col">Delivery Rating </th>
-              <th scope="col">Quality Rating</th>
-              <th scope="col">Q1 Purchase</th>
-              <th scope="col">Q1 purchase Return</th>
-              <th scope="col">Q1 Delivery Rating</th>
-              <th scope="col">Q1 Quality Rating</th>
-              <th scope="col">Q2 Purchase</th>
-              <th scope="col">Q2 purchase Return</th>
-              <th scope="col">Q2 Delivery Rating</th>
-              <th scope="col">Q2 Quality Rating</th>
-              <th scope="col">Q3 Purchase</th>
-              <th scope="col">Q3 purchase Return</th>
-              <th scope="col">Q3 Delivery Rating</th>
-              <th scope="col">Q3 Quality Rating</th>
-              <th scope="col">Q4 Purchase</th>
-              <th scope="col">Q4 purchase Return</th>
-              <th scope="col">Q4 Delivery Rating</th>
-              <th scope="col">Q4 Quality Rating</th>
-            </tr>
-          </thead>
-          <tbody *ngIf="Tabledata.length !=0">
-            <tr *ngFor="let data of Tabledata;">
-              <!-- <td style="text-align: left;">{{datamonth}}</td> -->
-              <td scope="col">{{data.AC_NAME}}</td>
-              <td scope="col">{{data.PRVYR_GRN_QTY}}</td>
-              <td scope="col"></td>
-              <td scope="col"></td>
-              <td scope="col" style="text-align: right;">{{data.PRVYR_DELV_RATE1}}</td>
-              <td scope="col" style="text-align: right;">{{data.PRVYR_DELV_RATE2}} </td>
-              <td scope="col" style="text-align: right;">{{data.PRVYR_QUAL_RATE}} </td>
-              <td scope="col" style="text-align: right;">{{data.Q1_GRN_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q1_CR_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q1_DEVL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q1_QUAL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q2_GRN_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q2_CR_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q2_DEVL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q2_QUAL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q3_GRN_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q3_CR_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q3_DEVL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q3_QUAL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q4_GRN_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q4_CR_QTY}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q4_DEVL_RATE}}</td>
-              <td scope="col" style="text-align: right;">{{data.Q4_QUAL_RATE}}</td>
-
-            </tr>
-          </tbody>
-        </table>
-        <!-- </smart-table> -->
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+  <div class="col-12">
+    <div class="table-responsive">
+      <div class="table-fixed">
+        <div class="card">
+          <div class="card-block">
+            <table class="table table-striped table-bordered table-hover compact">
+              <thead style="position: sticky; top: 0; text-align: center;">
+                <tr>
+                  <th scope="col">Supplier Name</th>
+                  <th scope="col" style="text-align: right;">Avg. Purchase</th>
+                  <th scope="col" style="text-align: right;">Avg. Purchase Returns</th>
+                  <th scope="col" style="text-align: right;">Avg. Purchase Schedule</th>
+                  <th scope="col" style="text-align: right;">Delivery Rating</th>
+                  <th scope="col" style="text-align: right;">Delivery Rating </th>
+                  <th scope="col" style="text-align: right;">Quality Rating</th>
+                  <th scope="col" style="text-align: right;">Q1 Purchase</th>
+                  <th scope="col" style="text-align: right;">Q1 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q1 Delivery Rating</th>
+                  <th scope="col" style="text-align: right;">Q1 Quality Rating</th>
+                  <th scope="col" style="text-align: right;">Q2 Purchase</th>
+                  <th scope="col" style="text-align: right;">Q2 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q2 Delivery Rating</th>
+                  <th scope="col" style="text-align: right;">Q2 Quality Rating</th>
+                  <th scope="col" style="text-align: right;">Q3 Purchase</th>
+                  <th scope="col" style="text-align: right;">Q3 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q3 Delivery Rating</th>
+                  <th scope="col" style="text-align: right;">Q3 Quality Rating</th>
+                  <th scope="col" style="text-align: right;">Q4 Purchase</th>
+                  <th scope="col" style="text-align: right;">Q4 purchase Return</th>
+                  <th scope="col" style="text-align: right;">Q4 Delivery Rating</th>
+                  <th scope="col" style="text-align: right;">Q4 Quality Rating</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="Tabledata.length !=0">
+                <tr *ngFor="let data of Tabledata;">
+                  <!-- <td style="text-align: left;">{{datamonth}}</td> -->
+                  <td scope="col">{{data.AC_NAME}}</td>
+                  <td scope="col" style="text-align: right;">{{data.PRVYR_GRN_QTY}}</td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col" style="text-align: right;">{{data.PRVYR_DELV_RATE1}}</td>
+                  <td scope="col" style="text-align: right;">{{data.PRVYR_DELV_RATE2}} </td>
+                  <td scope="col" style="text-align: right;">{{data.PRVYR_QUAL_RATE}} </td>
+                  <td scope="col" style="text-align: right;">{{data.Q1_GRN_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q1_CR_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q1_DEVL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q1_QUAL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q2_GRN_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q2_CR_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q2_DEVL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q2_QUAL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q3_GRN_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q3_CR_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q3_DEVL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q3_QUAL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q4_GRN_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q4_CR_QTY}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q4_DEVL_RATE}}</td>
+                  <td scope="col" style="text-align: right;">{{data.Q4_QUAL_RATE}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-
-
   </div>
 </div>
-<!-- <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-    <option selected>Export Type </option>
-    <option>CSV</option>
-    <option>PDF</option>
-  </select> -->
-
-<!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
-
-</smart-table> -->
-
-<!-- <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping"
-    [keyboardNavigation]="keyboardNavigation" [columns]="columns"></smart-table> -->
