--- a/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
+++ b/src/app/pages/purchase/top5-suppliers-cr-percent/top5-suppliers-cr-percent.component.html
@@ -7,11 +7,11 @@
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
-      <div class="form-group row justify-content-md-center" style="margin: 2%;" *ngIf="showBranch">
-        <div class="col-sm-3">
-          <label>Select Branch <sub class="required">* </sub></label>
+      <div class="row " style="margin: 1%;">
+        <div class="col-sm-2" *ngIf="showBranch">
+          <label>Select Branch <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2" *ngIf="showBranch">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME [(ngModel)]="selectedBrach"
@@ -22,12 +22,12 @@
             </span>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm-3">
+        <!-- </div>
+      <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+        <div class="col-sm-2">
           <label>Select Dates <sub class="required">* </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <div class="form-group input-group">
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="fdate" id="fdate" appTheme class="form-control"
@@ -42,10 +42,10 @@
               This field is required
             </div>
           </div>
-          <!-- </div>
-        <div class="col-sm-4"> -->
+        </div>
+        <div class="col-sm-2">
           <!-- [minDate]="fromdate" [maxDate]="maxDate" -->
-          <div class="form-group input-group" style="margin: 2%;">
+          <div class="form-group input-group">
             <span class="border-lable-flt">
               <input type="text" placeholder="dd/mm/yyyy" name="tdate" id="tdate" class="form-control"
                 [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY'}" [(ngModel)]="todate" formControlName="TO" required
@@ -60,8 +60,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- 
+        <!-- </div> -->
+        <!-- 
       <div class="row" style="margin: 2%;">
         <div class="col-sm-3">
           <label> Customer Select Option *</label>
@@ -81,87 +81,54 @@
           </div>
         </div>
       </div> -->
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm text-center">
+        <!-- <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+        <div class="col-sm">
           <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
               [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
         </div>
+        <!-- </div> -->
       </div>
     </div>
   </form>
 </div>
 
-<!-- *ngIf="showtable" -->
-<div class="row" *ngIf="showtable">
-  <div class="col-sm">
-    <div class="card">
-      <div class="card-block">
-        <!-- <select class="form-control" style="width: 120px;
-  height: 30px;
-  font-size: 10px;
-  margin-top: 3px;
-  float:right;" (change)="handleClick($event, 'csv')">
-          <option selected>Export Type </option>
-          <option>CSV</option>
-          <option>PDF</option>
-      </select> -->
-        <!-- <smart-table #table class="table-hover table-bordered compact" id="table" [dataSource]="dataSource"
-          [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true"
-          [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode"
-          [selectionMode]="'one'">
-      </smart-table> -->
-
-        <!-- <smart-table #table id="table"> -->
-        <table class="table table-striped table-bordered table-hover compact">
-          <thead>
-            <tr>
-              <th scope="col">Sr. No.</th>
-              <th scope="col">Supplier Name</th>
-              <th scope="col">Receipt Qty</th>
-              <th scope="col">CR Qty</th>
-              <th scope="col">Receipt Tonnage</th>
-              <th scope="col">CR Tonnage</th>
-              <th scope="col">CR % On Tonnage</th>
-              <th scope="col">Rejection Details</th>
-            </tr>
-          </thead>
-          <tbody *ngIf="Tabledata.length !=0">
-            <tr *ngFor="let data of Tabledata">
-              <td>{{data.SR_NO}}</td>
-              <td>{{data.AC_NAME}}</td>
-              <td>{{data.RECEIPT_QTY}}</td>
-              <td>{{data.CR_QTY}}</td>
-              <td>{{data.RECEIPT_WT}}</td>
-              <td>{{data.CR_WT}}</td>
-              <td>{{data.CR_PERCENT}}</td>
-              <td>{{data.REJ_DETAILS}}</td>
-            </tr>
-          <tbody *ngIf="Tabledata.length ==0">
-            <td>No Data</td>
-          </tbody>
-        </table>
-        <!-- </smart-table> -->
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+  <div class="col-12">
+    <div class="table-responsive">
+      <div class="table-fixed">
+        <div class="card">
+          <div class="card-block">
+            <table class="table table-striped table-bordered table-hover compact">
+              <thead style="position: sticky; top: 0; text-align: center;">
+                <tr>
+                  <th scope="col" class="td_right">Sr. No.</th>
+                  <th scope="col" class="td_left" style="width: 30%;">Supplier Name</th>
+                  <th scope="col" class="td_right">Receipt Qty</th>
+                  <th scope="col" class="td_right">CR Qty</th>
+                  <th scope="col" class="td_right">Receipt Tonnage</th>
+                  <th scope="col" class="td_right">CR Tonnage</th>
+                  <th scope="col" class="td_right">CR % On Tonnage</th>
+                  <th scope="col" class="td_left">Rejection Details</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="Tabledata.length !=0">
+                <tr *ngFor="let data of Tabledata">
+                  <td class="td_right">{{data.SR_NO}}</td>
+                  <td class="td_left" style="width: 30%;">{{data.AC_NAME}}</td>
+                  <td class="td_right">{{data.RECEIPT_QTY}}</td>
+                  <td class="td_right">{{data.CR_QTY}}</td>
+                  <td class="td_right">{{data.RECEIPT_WT}}</td>
+                  <td class="td_right">{{data.CR_WT}}</td>
+                  <td class="td_right">{{data.CR_PERCENT}}</td>
+                  <td class="td_left">{{data.REJ_DETAILS}}</td>
+                </tr>
+              <tbody *ngIf="Tabledata.length ==0">
+                <td>No Data</td>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-
-
   </div>
 </div>
-
-
-<!-- <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-  <option selected>Export Type </option>
-  <option>CSV</option>
-  <option>PDF</option>
-</select>
-
- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
-
-</smart-table>
-
-<smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping" [keyboardNavigation]="keyboardNavigation"
-  [columns]="columns"></smart-table> -->
