--- a/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
+++ b/src/app/pages/sales/customer-wise-plan-vs.-actual-sale/customer-wise-plan-vs.-actual-sale.component.html
@@ -7,14 +7,14 @@
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
-            <div class="form-group row justify-content-md-center" style="margin: 2%; " *ngIf="showBranch">
-                <div class="col-sm-3">
+            <div class="row" style="margin: 2%; ">
+                <div class="col-sm-2" *ngIf="showBranch">
                     <label>Select Branch <sub class="required">* </sub></label>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2" *ngIf="showBranch">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
-                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME"  #BRANCH_NAME
+                            <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
                                 [(ngModel)]="selectedBrach" formControlName="BRANCH_NAME" (focus)="onFocus(BRANCH_NAME)"
                                 [selectOnTab]='true' [required]="BRANCH">
                                 <ng-option *ngFor="let values of branch" [value]="values">
@@ -23,12 +23,12 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <div class="form-group row justify-content-md-center" style="margin: 2%;">
-                <div class="col-sm-3">
+                <!-- </div>
+            <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+                <div class="col-sm-2">
                     <label>Select Finacial year<sub class="required">* </sub></label>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
                             <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
@@ -40,8 +40,8 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <!-- <div class="row" style="margin: 2%;">
+                <!-- </div> -->
+                <!-- <div class="row" style="margin: 2%;">
                 <div class="col-sm-3">
                     <label>Select Month *</label>
                 </div>
@@ -58,60 +58,55 @@
                     </div>
                 </div>
             </div> -->
-        </div>
+                <!-- </div>
 
-        <div class="form-group row justify-content-md-center" style="margin: 2%;">
-            <div class="col-sm text-center">
-                <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
-                        [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+                <div class="col-sm">
+                    <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
+                            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+                </div>
             </div>
         </div>
     </form>
 </div>
-
-<div class="container-fluid">
-    <div class="form-group row justify-content-md-center" *ngIf="showtable">
-        <div class="col-lg-12">
-            <div class="card">
-                <div class="row" id="r1" style="margin-top: 1%;margin-bottom: 30%;">
-                    <div class="col-md-12">
-                        <div class="table-responsive">
-                            <div class="table-fixed">
-                                <!-- <smart-table #table id="table"> -->
-                                <table class="table table-striped table-bordered table-hover compact">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">Customer Name</th>
-                                            <th scope="col">VA %</th>
-                                            <th scope="col">Planed Sale</th>
-                                            <th scope="col">Actual Sale</th>
-                                            <th scope="col">1st 50% Debit note/Invoice No.</th>
-                                            <th scope="col">Difference</th>
-                                            <th scope="col">VA Effect</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody *ngIf="Tabledata.length !=0">
-                                        <tr *ngFor="let data of Tabledata">
-                                            <td>{{data.AC_NAME}}</td>
-                                            <td>{{data.VA_PERCENT}}</td>
-                                            <td>{{data.SCH_QTY}}</td>
-                                            <td>{{data.SALES_QTY}}</td>
-                                            <td>{{data.DIFF_QTY}}</td>
-                                            <td>{{data.VA_EFFECT}}</td>
-                                        </tr>
-                                    <tbody *ngIf="Tabledata.length ==0">
-                                        <td>No Data</td>
-                                    </tbody>
-                                </table>
-                                <!-- </smart-table> -->
-                            </div>
-                        </div>
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+    <div class="col-12">
+        <div class="table-responsive">
+            <div class="table-fixed">
+                <div class="card">
+                    <div class="card-block">
+                        <table class="table table-striped table-bordered table-hover compact">
+                            <thead style="position: sticky; top: 0; text-align: center;">
+                                <tr>
+                                    <th scope="col" class="td_left">Customer Name</th>
+                                    <th scope="col" class="td_right">VA %</th>
+                                    <th scope="col" class="td_right">Planed Sale</th>
+                                    <th scope="col" class="td_right">Actual Sale</th>
+                                    <th scope="col" class="td_right">1st 50% Debit note/Invoice No.</th>
+                                    <th scope="col" class="td_right">Difference</th>
+                                    <th scope="col" class="td_right">VA Effect</th>
+                                </tr>
+                            </thead>
+                            <tbody *ngIf="Tabledata.length !=0">
+                                <tr *ngFor="let data of Tabledata">
+                                    <td class="td_left">{{data.AC_NAME}}</td>
+                                    <td class="td_right">{{data.VA_PERCENT}}</td>
+                                    <td class="td_right">{{data.SCH_QTY}}</td>
+                                    <td class="td_right">{{data.SALES_QTY}}</td>
+                                    <td class="td_right">{{data.DIFF_QTY}}</td>
+                                    <td class="td_right">{{data.VA_EFFECT}}</td>
+                                </tr>
+                            <tbody *ngIf="Tabledata.length ==0">
+                                <td>No Data</td>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 
 
