--- a/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
+++ b/src/app/pages/sales/monthly-sales-and-target/monthly-sales-and-target.component.html
@@ -7,11 +7,11 @@
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
-      <div class="form-group row justify-content-md-center" style="margin: 2%;" *ngIf="showBranch">
-        <div class="col-sm-3">
+      <div class="row" style="margin: 1%;">
+        <div class="col-sm-2" *ngIf="showBranch">
           <label>Select Branch <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-2" *ngIf="showBranch">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME [(ngModel)]="selectedBrach"
@@ -22,12 +22,10 @@
             </span>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <label>Select Finacial year <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
@@ -39,56 +37,38 @@
             </span>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="form-group row justify-content-md-center" style="margin: 2%;">
-      <div class="col-sm text-center">
-        <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
-            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        <!-- </div> -->
+        <div class="col-sm">
+          <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
+              [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        </div>
       </div>
     </div>
   </form>
 </div>
-
-<div class="form-group row justify-content-md-center" *ngIf="showtable">
-  <div class="col-sm">
-      <div class="card">
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+  <div class="col-12">
+    <div class="table-responsive">
+      <div class="table-fixed">
+        <div class="card">
           <div class="card-block">
-              <!-- <select class="form-control" style="width: 120px;
-  height: 30px;
-  font-size: 10px;
-  margin-top: 3px;
-  float:right;" (change)="handleClick($event, 'csv')">
-          <option selected>Export Type </option>
-          <option>CSV</option>
-          <option>PDF</option>
-      </select> -->
-              <!-- <smart-table #table class="table-hover table-bordered compact" id="table" [dataSource]="dataSource"
-          [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true"
-          [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode"
-          [selectionMode]="'one'">
-      </smart-table> -->
-
-              <!-- <smart-table #table id="table"> -->
-              <table class="table table-striped table-bordered table-hover compact">
-                  <thead>
-                      <tr *ngIf="Headers.length !=0">
-                          <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
-                          </th>
-                      </tr>
-                  </thead>
-                  <tbody *ngIf="Tabledata.length !=0">
-                      <tr *ngFor="let data of Tabledata;">
-                          <!-- <td style="text-align: left;">{{datamonth}}</td> -->
-                          <td *ngFor="let datarec of data" style="text-align: right;">{{datarec}}</td>
-                      </tr>
-                  </tbody>
-              </table>
-              <!-- </smart-table> -->
+            <table class="table table-striped table-bordered table-hover compact">
+              <thead style="position: sticky; top: 0; text-align: center;">
+                <tr *ngIf="Headers.length !=0">
+                  <th scope="col" *ngFor="let data of Headers" style="text-align: right;">{{data.VALUE}}
+                  </th>
+                </tr>
+              </thead>
+              <tbody *ngIf="Tabledata.length !=0">
+                <tr *ngFor="let data of Tabledata;">
+                  <td *ngFor="let datarec of data" style="text-align: right;">{{datarec != null ? datarec : 0}}</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
+        </div>
       </div>
-
-
+    </div>
   </div>
 </div>
 
