--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.html
@@ -7,11 +7,11 @@
   </div>
   <form [formGroup]="angForm">
     <div class="card-block">
-      <div class="form-group row justify-content-md-center" style="margin: 2%;" *ngIf="showBranch">
-        <div class="col-sm-3">
+      <div class="form-group row justify-content-md-center" style="margin: 1%;"> <!--  *ngIf="showBranch" -->
+        <div class="col-sm-2" *ngIf="showBranch">
           <label>Select Branch <sub class="required">* </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2" *ngIf="showBranch">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME [(ngModel)]="selectedBrach"
@@ -22,12 +22,10 @@
             </span>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm-3">
-          <label>Select Finacial year <sub class="required">* </sub></label>
+        <div class="col-sm-2">
+          <label>Select Finacial Year <sub class="required">* </sub></label>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <div class="form-group form-primary form-static-label">
             <span class="border-lable-flt">
               <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
@@ -39,107 +37,96 @@
             </span>
           </div>
         </div>
-      </div>
-      <div class="form-group row justify-content-md-center" style="margin: 2%;">
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <label>Customer Type <sub class="required"> * </sub></label>
         </div>
-        <div class="col-sm-3">
-          <div class="form-check mb-3">
-            <input class="form-check-input" type="radio" name="formRadios" id="formRadios1" value="0"
-              formControlName="CUTOMER_TYPE" checked>
-            <label class="form-check-label" for="formRadios1">
-              Domestic
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="formRadios" id="formRadios2" value="1"
+        <div class="col-sm-2">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="CUTOMER_TYPE" id="inlineRadio1" value="0"
               formControlName="CUTOMER_TYPE">
-            <label class="form-check-label" for="formRadios2">
-              Export
-            </label>
+            <label class="form-check-label" for="inlineRadio1">Domestic</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="CUTOMER_TYPE" id="inlineRadio2" value="1"
+              formControlName="CUTOMER_TYPE">
+            <label class="form-check-label" for="inlineRadio2">Export</label>
           </div>
         </div>
       </div>
-      <!-- <div class="row" style="margin: 2%;">
-              <div class="col-sm-3">
-                  <label>Select Month *</label>
-              </div>
-              <div class="col-sm-4">
-                  <div class="form-group form-primary form-static-label">
-                      <span class="border-lable-flt">
-                          <ng-select id="MONTH_NAME" bindValue="CODE" bindLabel="NAME" required #MONTH_NAME
-                              [(ngModel)]=" selectedMonth" formControlName="MONTH_NAME" (focus)="onFocus(MONTH_NAME)"
-                              [selectOnTab]='true'>
-                              <ng-option *ngFor="let values of branch" [value]="values">
-                                  {{values.NAME}}</ng-option>
-                          </ng-select>
-                      </span>
-                  </div>
-              </div>
-          </div> -->
-    </div>
-
-    <div class="form-group row justify-content-md-center" style="margin: 2%;">
-      <div class="col-sm text-center">
-        <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
-            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+      <div class="form-group row justify-content-md-center" style="margin: 1%;">
+        <div class="col-sm text-center">
+          <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
+              [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        </div>
       </div>
     </div>
   </form>
 </div>
 
-<div class="row" *ngIf="showtable">
-  <div class="col-sm">
-    <div class="card">
-      <div class="card-block">
-
-        <!-- <smart-table #table id="table"> -->
-        <table class="table table-striped table-bordered table-hover compact">
-          <thead>
-            <tr>
-              <th>Sr. No.</th>
-              <th>Name of Customer</th>
-              <th>Payment Amount Plan For The Month Rs.</th>
-              <th>Amount Received Rs.</th>
-              <th>% of Recovery</th>
-              <th>Credit Days</th>
-              <th>Avg Payment Receipt Days</th>
-              <th>Avg Payment Receipt Days</th>
-              <th>Avg Payment Receipt Days</th>
-              <th>Avg Payment Receipt Days</th>
-              <th>Avg Payment Receipt Days</th>
-              <th>Avg Payment Receipt Days</th>
-            </tr>
-          </thead>
-          <tbody *ngIf="Tabledata.length !=0">
-            <tr *ngFor="let data of Tabledata;let indexOfelement = index">
-              <td class="td_right">{{indexOfelement != Tabledata?.length - 1 ? indexOfelement + 1 : ''}}
-              </td>
-              <td [ngClass]="indexOfelement != Tabledata?.length - 1 ? '' : 'bold'">{{data.SUBGL_LONGNAME}}
-              </td>
-              <td class="td_right">{{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
-              <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
-              <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' :
-                data.RECV_PERCENT}}
-              </td>
-              <td class="td_right">{{data.CREDIT_DAYS != null ? data.CREDIT_DAYS : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS != null ? data.CR_DAYS : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS1 != null ? data.CR_DAYS1 : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS2 != null ? data.CR_DAYS2 : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS3 != null ? data.CR_DAYS3 : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
-              <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
-            </tr>
-          <tbody *ngIf="Tabledata.length ==0">
-            <td>No Data</td>
-          </tbody>
-        </table>
-        <!-- </smart-table> -->
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+  <div class="col-12">
+    <div class="table-responsive">
+      <div class="table-fixed">
+        <div class="card">
+          <div class="card-block">
+            <table class="table table-striped table-bordered table-hover compact">
+              <thead style="position: sticky; top: 0; text-align: center;">
+                <tr>
+                  <th class="td_right">Sr. No.</th>
+                  <th class="td_left">Name of Customer</th>
+                  <th class="td_right">Payment Amount Plan For The Month Rs.</th>
+                  <th class="td_right">Amount Received Rs.</th>
+                  <th class="td_right">% of Recovery</th>
+                  <th class="td_right">Credit Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                  <th class="td_right">Avg Payment Receipt Days</th>
+                </tr>
+              </thead>
+              <tbody *ngIf="Tabledata.length !=0">
+                <tr *ngFor="let data of Tabledata;let indexOfelement = index">
+                  <td class="td_right"> {{indexOfelement }}</td>
+                  <td class="td_left">{{data.SUBGL_LONGNAME}} </td>
+                  <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
+                  <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
+                  <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' : data.RECV_PERCENT}} </td>
+                  <td class="td_right">{{data.CREDIT_DAYS != null ? data.CREDIT_DAYS : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS != null ? data.CR_DAYS : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS1 != null ? data.CR_DAYS1 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS2 != null ? data.CR_DAYS2 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS3 != null ? data.CR_DAYS3 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
+                </tr>
+              <tbody *ngIf="Tabledata.length ==0">
+                <tr>
+                  <td>No Data</td>
+                </tr>
+              </tbody>
+              <tfoot style="position: sticky; bottom: 0; text-align: center;">
+                <tr *ngFor="let data of FooterData;let indexOfelement = index">
+                  <td class="td_right"> </td>
+                  <td style="font-weight: bold;">{{data.SUBGL_LONGNAME}} </td>
+                  <td class="td_right"> {{data.INVOICE_AMT != null ? data.INVOICE_AMT : '-'}}</td>
+                  <td class="td_right">{{data.RECEIPT_AMT != null ? data.RECEIPT_AMT : '-'}}</td>
+                  <td class="td_right">{{data.RECV_PERCENT != null ? data.RECV_PERCENT + '%' : data.RECV_PERCENT}} </td>
+                  <td class="td_right">{{data.CREDIT_DAYS != null ? data.CREDIT_DAYS : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS != null ? data.CR_DAYS : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS1 != null ? data.CR_DAYS1 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS2 != null ? data.CR_DAYS2 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS3 != null ? data.CR_DAYS3 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS4 != null ? data.CR_DAYS4 : '-'}}</td>
+                  <td class="td_right">{{data.CR_DAYS5 != null ? data.CR_DAYS5 : '-'}}</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
-
-
   </div>
 </div>
 <!-- 
