--- a/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
+++ b/src/app/pages/sales/schedule-adherence-for-the-month/schedule-adherence-for-the-month.component.html
@@ -7,11 +7,11 @@
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
-            <div class="form-group row justify-content-md-center" style="margin: 2%;" *ngIf="showBranch">
-                <div class="col-sm-3">
-                    <label>Select Branch <sub class="required">* </sub></label>
+            <div class="form-group row justify-content-md-center" style="margin: 1%;">
+                <div class="col-sm-2" *ngIf="showBranch">
+                    <label>Select Branch <sub class="required"> * </sub></label>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2" *ngIf="showBranch">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
                             <ng-select id="BRANCH_NAME" bindValue="CODE" bindLabel="NAME" #BRANCH_NAME
@@ -23,12 +23,12 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <div class="form-group row justify-content-md-center" style="margin: 2%;">
-                <div class="col-sm-3">
+                <!-- </div>
+            <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+                <div class="col-sm-2">
                     <label>Select Finacial year <sub class="required">* </sub></label>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="form-group form-primary form-static-label">
                         <span class="border-lable-flt">
                             <ng-select id="YEAR_NAME" bindValue="DATEVALUE" bindLabel="DATEDESC" required #YEAR_NAME
@@ -40,8 +40,8 @@
                         </span>
                     </div>
                 </div>
-            </div>
-            <!-- <div class="row" style="margin: 2%;">
+                <!-- </div> -->
+                <!-- <div class="row" style="margin: 2%;">
                 <div class="col-sm-3">
                     <label>Select Month *</label>
                 </div>
@@ -58,69 +58,50 @@
                     </div>
                 </div>
             </div> -->
-        </div>
+                <!-- </div>
 
-        <div class="form-group row justify-content-md-center" style="margin: 2%;">
-            <div class="col-sm text-center">
-                <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
-                        [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+        <div class="form-group row justify-content-md-center" style="margin: 2%;"> -->
+                <div class="col-sm">
+                    <button class="btn btn-primary sm" (click)="loadData()">Go <i class="fa"
+                            [ngClass]="{'fa-spin fa-spinner': isLoading}"></i></button>
+                </div>
             </div>
         </div>
-
     </form>
 
 </div>
-
-<div class="row" *ngIf="showtable">
-    <div class="col-sm">
-        <div class="card">
-            <div class="card-block">
-
-                <!-- <smart-table #table id="table"> -->
-                <table class="table table-striped table-bordered table-hover compact">
-                    <thead>
-                        <tr>
-                            <th scope="col">Sr. No.</th>
-                            <th scope="col">Customer</th>
-                            <th scope="col">Sch. Qty</th>
-                            <th scope="col">Disp. Qty</th>
-                            <th scope="col">Adherence</th>
-                        </tr>
-                    </thead>
-                    <tbody *ngIf="Tabledata.length !=0">
-                        <tr *ngFor="let data of Tabledata;let indexOfelement = index">
-                            <td>{{indexOfelement + 1}}</td>
-                            <td>{{data.AC_NAME}}</td>
-                            <td>{{data.SCH_QTY}}</td>
-                            <td>{{data.SALE_QTY}}</td>
-                            <td>{{data.ADHERENCE}}</td>
-                        </tr>
-                    <tbody *ngIf="Tabledata.length ==0">
-                        <td>No Data</td>
-                    </tbody>
-                </table>
-                <!-- </smart-table> -->
+<div class="row" id="r1" style="margin-top: 20px;margin-bottom: 20px;" *ngIf="showtable">
+    <div class="col-12">
+        <div class="table-responsive">
+            <div class="table-fixed">
+                <div class="card">
+                    <div class="card-block">
+                        <table class="table table-striped table-bordered table-hover compact">
+                            <thead style="position: sticky; top: 0; text-align: center;">
+                                <tr>
+                                    <th scope="col" class="td_right">Sr. No.</th>
+                                    <th scope="col" class="td_left">Customer</th>
+                                    <th scope="col" class="td_right">Sch. Qty</th>
+                                    <th scope="col" class="td_right">Disp. Qty</th>
+                                    <th scope="col" class="td_right">Adherence</th>
+                                </tr>
+                            </thead>
+                            <tbody *ngIf="Tabledata.length !=0">
+                                <tr *ngFor="let data of Tabledata;let indexOfelement = index">
+                                    <td class="td_right">{{indexOfelement + 1}}</td>
+                                    <td class="td_left">{{data.AC_NAME}}</td>
+                                    <td class="td_right">{{data.SCH_QTY}}</td>
+                                    <td class="td_right">{{data.SALE_QTY}}</td>
+                                    <td class="td_right">{{data.ADHERENCE}}</td>
+                                </tr>
+                            <tbody *ngIf="Tabledata.length ==0">
+                                <td>No Data</td>
+                            </tbody>
+                        </table>
+                        <!-- </smart-table> -->
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </div>
 </div>
-
-
-<!-- <select class="form-control" style="width: 120px;
-    height: 30px;
-    font-size: 10px;
-    margin-top: 3px;
-    float: right;" (change)="handleClick($event, 'csv')">
-        <option selected>Export Type </option>
-        <option>CSV</option>
-        <option>PDF</option>
-    </select> -->
-
-<!-- <smart-table #table class="table-hover table-bordered" id="table" [dataSource]="dataSource" [sortMode]="sortMode" [paging]="true" [columns]="columns" [columnMenu]="true" [filtering]="true" [columnReorder]="true" [columnResize]="true" [columnSizeMode]="columnSizeMode" [selection]="true" [selectionMode]="'one'">
-
-</smart-table> -->
-<!-- 
-    <smart-table #table id="table" [dataSource]="dataSource" [grouping]="grouping"
-        [keyboardNavigation]="keyboardNavigation" [columns]="columns"></smart-table> -->
